--- a/app/src/main/res/layout/activity_conductor.xml
+++ b/app/src/main/res/layout/activity_conductor.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,7 +14,49 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/iniciarViajeButton"/>
+        app:layout_constraintBottom_toTopOf="@id/ordenPasajerosTextView"/>
+
+    <TextView
+        android:id="@+id/ordenPasajerosTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:textSize="14sp"
+        android:gravity="center"
+        android:background="#F5F5F5"
+        app:layout_constraintBottom_toTopOf="@id/rutasRadioGroup"/>
+
+    <RadioGroup
+        android:id="@+id/rutasRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@id/iniciarViajeButton">
+
+        <RadioButton
+            android:id="@+id/rutaPrincipalRadio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ruta Principal"
+            android:checked="true"
+            android:layout_marginEnd="8dp"/>
+
+        <RadioButton
+            android:id="@+id/rutaAlternativa1Radio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ruta 1"
+            android:layout_marginEnd="8dp"/>
+
+        <RadioButton
+            android:id="@+id/rutaAlternativa2Radio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ruta 2"/>
+
+    </RadioGroup>
 
     <Button
         android:id="@+id/iniciarViajeButton"
@@ -24,4 +67,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="16dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
